# ms_ipv6

./: .gitignore  4b.json  4b_thinking.json  README.md  dataset__AI-MO__NuminaMath-1.5.json  model__Qwen__Qwen3-4B-Thinking-2507.json  model__Tencent-Hunyuan__Hunyuan-0.5B-Instruct.json  pyproject.toml
.github/workflows/: release.yml
ms_ipv6/: cli.py  downloader.py  schema.py  utils.py
scripts/: tag.sh
tests/: test_ms_ipv6.py
