[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-ipv6"
version = "0.1.0"
description = "A Python package to assist with ModelScope downloads"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=0.900",
]

[project.scripts]
ms-ipv6 = "ms_ipv6.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ms-ipv6"
Repository = "https://github.com/yourusername/ms-ipv6"
Issues = "https://github.com/yourusername/ms-ipv6/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ms_ipv6*"]

[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".conda",
    ".conda/**",
    ".git",
    ".git/**", 
    ".ruff_cache",
    ".ruff_cache/**",
    "__pycache__",
    "__pycache__/**",
    "*.egg-info",
    "*.egg-info/**",
    "build",
    "build/**",
    "dist", 
    "dist/**",
    ".venv",
    ".venv/**",
    "venv",
    "venv/**",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by ruff format
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
